--- a/website/src/css/showcase.scss
+++ b/website/src/css/showcase.scss
@@ -1,3 +1,5 @@
+@import "shared";
+
 .showcaseSection {
   width: 800px;
   margin: 64px auto;
@@ -11,6 +13,23 @@
   .logos img {
     padding: 0;
   }
+
+  .info {
+    font-size: 15px;
+  }
+
+  p a {
+    @extend %link-style;
+  }
+
+  .form-button {
+    @extend %button-link-style;
+    margin-bottom: 28px;
+  }
+}
+
+html[data-theme="dark"] .showcaseSection p a {
+  @extend %link-style-dark;
 }
 
 .home-showcase-section {
@@ -65,8 +84,8 @@
   h3 {
     margin-bottom: 0;
     line-height: 21px;
-    padding: 5px 5px 0;
-    font-size: 20px;
+    padding: 5px 5px 2px;
+    font-size: 21px;
   }
 
   p {
